Adding new UI pages

--- a/client/public/addteabag.html
+++ b/client/public/addteabag.html
@@ -18,9 +18,9 @@
 
         <div class="container">
             <form method="POST" class="appointment-form" id="appointment-form">
-                <h2>Packer UI</h2>
+                <h2>Add teabag UI</h2>
                 <div class="form-group-1">
-                	<input type="text" name="productId" id="productId" placeholder="Product Id" required />
+                	<input type="text" name="packerQRCodeId" id="packerQRCodeId" placeholder="Packer QRCode" required />
                     <input type="text" name="productName" id="productName" placeholder="Product Name" required/>
                     <input type="text" name="packageType" id="packageType" placeholder="Package Type" required/>
                 </div>
