--- a/client/public/littlepo.html
+++ b/client/public/littlepo.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Login</title>
+    <title>Littpo UI</title>
 
     <!-- Font Icon -->
-    <link rel="stylesheet" href="fonts/material-icon/css/material-design-iconic-font.min.css">
+    <link rel="stylesheet" href="/fonts/material-icon/css/material-design-iconic-font.min.css">
 
     <!-- Main css -->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
 
@@ -18,13 +18,12 @@
 
         <div class="container">
             <form method="POST" class="appointment-form" id="appointment-form">
-                <h2>Login</h2>
+                <h2>Littepo UI</h2>
                 <div class="form-group-1">
-                	<input type="email" name="email" id="email" placeholder="User ID" required />
-                    <input type="password" class="form-input" name="password" id="password" placeholder="Password"/>
+                	<input type="text" name="packerQRCodeId" id="packerQRCodeId" placeholder="Packer QRCode" required />
                 </div>
                 <div class="form-submit">
-                    <!-- <input type="reset" name="cancel" id="cancel" class="cancel" value="Cancel" /> -->
+                    <input type="reset" name="cancel" id="cancel" class="cancel" value="Cancel" />
                     <input type="submit" name="submit" id="submit" class="submit" value="Submit" />
                 </div>
             </form>
@@ -33,7 +32,7 @@
     </div>
 
     <!-- JS -->
-    <script src="vendor/jquery/jquery.min.js"></script>
-    <script src="js/main.js"></script>
+    <script src="/vendor/jquery/jquery.min.js"></script>
+    <script src="/js/main.js"></script>
 </body>
 </html>
