--- a/client/public/packerMenu.html
+++ b/client/public/packerMenu.html
@@ -41,7 +41,7 @@
     </div>
 
     <!-- JS -->
-    <script src="vendor/jquery/jquery.min.js"></script>
-    <script src="js/main.js"></script>
+    <script src="/vendor/jquery/jquery.min.js"></script>
+    <script src="/js/main.js"></script>
 </body>
 </html>
