--- a/client/public/packerMenu.html
+++ b/client/public/packerMenu.html
@@ -24,7 +24,7 @@
                         <label>Node ID:</label>
                     </div> -->
                     <div class="form-group-ans">
-                        <label><a href="/packer/addpackage">Create Packer package</a></label>
+                        <label><a href="/packer/scanharvester">Create Packer package</a></label>
                     </div>
                 </div>
                 <div class="form-row">
