--- a/client/public/packer.html
+++ b/client/public/packer.html
@@ -20,7 +20,7 @@
             <form method="POST" class="appointment-form" id="appointment-form">
                 <h2>Packer UI</h2>
                 <div class="form-group-1">
-                	<input type="text" name="productId" id="productId" placeholder="Product Id" required />
+                	<input type="text" value ="<%= qrCodeId %>" name="productId" id="productId" placeholder="Product Id" required />
                     <input type="text" name="productName" id="productName" placeholder="Product Name" required/>
                     <input type="text" name="packageType" id="packageType" placeholder="Package Type" required/>
                 </div>
@@ -32,7 +32,6 @@
         </div>
 
     </div>
-
     <!-- JS -->
     <script src="/vendor/jquery/jquery.min.js"></script>
     <script src="/js/main.js"></script>
