Integrate with API

--- a/client/public/customer.html
+++ b/client/public/customer.html
@@ -21,6 +21,7 @@
                 <h2>Query Tracking Information</h2>
                 <div class="form-group-1">
                     <input type="text" name="qrCodeId" id="qrCodeId" placeholder="Please enter of scan QRCode of product" required />
+                    <!-- <input type="text" name="nodeName" id="nodeName" placeholder="Node Name" required /> -->
                 </div>
                 <div class="form-row">
                     <div class="video-group">
@@ -32,7 +33,7 @@
                 </div>
                 <div class="form-submit">
                         <input type="reset" name="Scan" id="scan" class="cancel" value="Scan QRCode"/>
-                    <input type="submit" name="submit" id="submit" class="submit" value="Submit" />
+                    <input type="submit" name="submit" id="submit" class="submit" value="Query Infor" />
                 </div>
             </form>
         </div>
