--- a/client/public/packer.html
+++ b/client/public/packer.html
@@ -20,7 +20,8 @@
             <form method="POST" class="appointment-form" id="appointment-form">
                 <h2>Packer UI</h2>
                 <div class="form-group-1">
-                	<input type="text" value ="<%= qrCodeId %>" name="productId" id="productId" placeholder="Product Id" required />
+                    <input type="text" value ="<%= qrCodeId %>" name="qrCodeId" id="qrCodeId" placeholder="B Node QRCode" required />
+                    <input type="text" name="productID" id="productID" placeholder="Product Id" required />
                     <input type="text" name="productName" id="productName" placeholder="Product Name" required/>
                     <input type="text" name="packageType" id="packageType" placeholder="Package Type" required/>
                 </div>
