--- a/client/public/harvester.html
+++ b/client/public/harvester.html
@@ -20,7 +20,7 @@
             <form method="POST" class="appointment-form" id="appointment-form">
                 <h2>Harvester UI</h2>
                 <div class="form-group-1">
-                	<input type="text" name="productId" id="productId" placeholder="Product Id" required />
+                	<input type="text" name="productID" id="productID" placeholder="Product Id" required />
                     <input type="text" name="productName" id="productName" placeholder="Product Name" required/>
                     <input type="text" name="packageType" id="packageType" placeholder="Package Type" required/>
                 </div>
