--- a/client/public/customer.html
+++ b/client/public/customer.html
@@ -17,7 +17,7 @@
     <div class="main">
 
         <div class="container">
-            <form method="POST" class="appointment-form" id="appointment-form">
+            <form method="POST" class="appointment-form" id="appointment-form" action="customer">
                 <h2>Query Tracking Information</h2>
                 <div class="form-group-1">
                     <input type="text" name="qrCodeId" id="qrCodeId" placeholder="Please enter of scan QRCode of product" required />
