Update tracking to Node G

--- a/client/public/customer.html
+++ b/client/public/customer.html
@@ -32,8 +32,9 @@
                     </div>
                 </div>
                 <div class="form-submit">
-                        <input type="reset" name="Scan" id="scan" class="cancel" value="Scan QRCode"/>
-                    <input type="submit" name="submit" id="submit" class="submit" value="Query Infor" />
+                    <input type="reset" name="Back" id="back" class="cancel" value="Back"/>
+                    <input type="reset" name="Scan" id="scan" class="cancel" value="Scan QRCode"/>
+                    <input type="submit" name="submit" id="submit" class="submit" value="Query Info" />
                 </div>
             </form>
         </div>
