--- a/client/public/littlepo.html
+++ b/client/public/littlepo.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Littpo UI</title>
+    <title>Littlepo UI</title>
 
     <!-- Font Icon -->
     <link rel="stylesheet" href="/fonts/material-icon/css/material-design-iconic-font.min.css">
@@ -18,9 +18,10 @@
 
         <div class="container">
             <form method="POST" class="appointment-form" id="appointment-form">
-                <h2>Littepo UI</h2>
+                <h2>Littlepo UI</h2>
                 <div class="form-group-1">
                     <input type="text" name="qrCodeId" id="qrCodeId" placeholder="Packer QRCode" required />
+                    <input type="text" name="weight" id="weight" placeholder="Package weight" required />
                 </div>
                 <div class="form-row">
                     <div class="video-group">
