--- a/client/public/error.html
+++ b/client/public/error.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Packer UI</title>
+    <title>Error</title>
 
     <!-- Font Icon -->
     <link rel="stylesheet" href="/fonts/material-icon/css/material-design-iconic-font.min.css">
@@ -18,17 +18,27 @@
 
         <div class="container">
             <form method="POST" class="appointment-form" id="appointment-form">
-                <h2>Packer UI</h2>
                 <div class="form-group-1">
-                    <input type="text" value ="<%= qrCodeId %>" name="qrCodeId" id="qrCodeId" placeholder="B Node QRCode" required readonly/>
-                    <input type="text" name="productID" id="productID" placeholder="Product Id" required />
-                    <input type="text" name="productName" id="productName" placeholder="Product Name" required/>
-                    <input type="text" name="packageType" id="packageType" placeholder="Package Type" required/>
-                    <input type="text" name="weight" id="weight" placeholder="Package Weight" required/>
+                    <h2>Error</h2>
+                    <div class="form-row">
+                        <div class="form-group">
+                            <label>Status:</label>
+                        </div>
+                        <div class="form-group-ans">
+                            <label><%= error %></label>
+                        </div>
+                    </div>
+                    <div class="form-row">
+                        <div class="form-group">
+                            <label>Message:</label>
+                        </div>
+                        <div class="form-group-ans">
+                            <label><%= message %></label>
+                        </div>
+                    </div>
                 </div>
                 <div class="form-submit">
-                    <input type="reset" name="cancel" id="cancel" class="cancel" value="Cancel" />
-                    <input type="submit" name="submit" id="submit" class="submit" value="Submit" />
+                    <input type="reset" name="back" id="back" class="cancel" url="<%= backURL %>" value="Back" />
                 </div>
             </form>
         </div>
