--- a/client/public/menu.html
+++ b/client/public/menu.html
@@ -40,7 +40,7 @@
                         <label>Node ID:</label>
                     </div> -->
                     <div class="form-group-ans">
-                        <label><a href="/littlepo">Littlpo Node</a></label>
+                        <label><a href="/littlepo">Littlepo Node</a></label>
                     </div>
                 </div>
                 <div class="form-row">
