Update query tracking info

--- a/client/public/error.html
+++ b/client/public/error.html
@@ -38,7 +38,7 @@
                     </div>
                 </div>
                 <div class="form-submit">
-                    <input type="reset" name="back" id="back" class="cancel" url="<%= backURL %>" value="Back" />
+                    <input type="reset" name="back" id="back" class="cancel" value="Back" />
                 </div>
             </form>
         </div>
