update add teabag

--- a/client/public/addteabag.html
+++ b/client/public/addteabag.html
@@ -20,12 +20,14 @@
             <form method="POST" class="appointment-form" id="appointment-form">
                 <h2>Add teabag UI</h2>
                 <div class="form-group-1">
-                	<input type="text" name="packerQRCodeId" id="packerQRCodeId" placeholder="Packer QRCode" required />
+                    <input type="text" name="packerQRCodeId" id="packerQRCodeId" placeholder="Packer QRCode" required />
+                    <input type="text" name="productID" id="productID" placeholder="Product ID" required/>
                     <input type="text" name="productName" id="productName" placeholder="Product Name" required/>
+                    <input type="text" name="weight" id="weight" placeholder="Weight" required/>
                     <input type="text" name="packageType" id="packageType" placeholder="Package Type" required/>
                 </div>
                 <div class="form-submit">
-                    <input type="reset" name="cancel" id="cancel" class="cancel" value="Cancel" />
+                    <input type="reset" name="back" id="back" class="cancel" url="/packer" value="Cancel" />
                     <input type="submit" name="submit" id="submit" class="submit" value="Submit" />
                 </div>
             </form>
