--- a/client/public/scanharvester.html
+++ b/client/public/scanharvester.html
@@ -30,6 +30,7 @@
                     </div>
                 </div>
                 <div class="form-submit">
+                    <input type="reset" name="back" id="back" url="/packer" class="cancel" value="Cancel"/>
                     <input type="reset" name="Scan" id="scan" class="cancel" value="Scan QRCode"/>
                     <input type="submit" name="submit" id="submit" class="submit" value="Create Packer" />
                 </div>
