--- a/client/public/harvester.html
+++ b/client/public/harvester.html
@@ -18,14 +18,14 @@
 
         <div class="container">
             <form method="POST" class="appointment-form" id="appointment-form">
-                <h2>Harvester UI</h2>
+                <h2>Create Harvest package</h2>
                 <div class="form-group-1">
                 	<input type="text" name="productID" id="productID" placeholder="Product Id" required />
                     <input type="text" name="productName" id="productName" placeholder="Product Name" required/>
                     <input type="text" name="packageType" id="packageType" placeholder="Package Type" required/>
                 </div>
                 <div class="form-submit">
-                    <input type="reset" name="cancel" id="cancel" class="cancel" value="Cancel" />
+                    <!-- <input type="reset" name="cancel" id="cancel" class="cancel" value="Cancel" /> -->
                     <input type="submit" name="submit" id="submit" class="submit" value="Submit" />
                 </div>
             </form>
