--- a/client/public/harvesterResult.html
+++ b/client/public/harvesterResult.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Harvester UI</title>
+    <title>Harvester</title>
 
     <!-- Font Icon -->
     <link rel="stylesheet" href="fonts/material-icon/css/material-design-iconic-font.min.css">
@@ -18,7 +18,7 @@
 
         <div class="container">
             <form method="POST" class="appointment-form" id="appointment-form">
-                <h2>Harvester UI</h2>
+                <h2>Tea Leaf Harvest package</h2>
                 <div class="form-row">
                 	<div class="form-group">
                         <label>Node ID:</label>
@@ -102,7 +102,7 @@
                 </div>
                 
                 <div class="form-submit">
-                    <input type="reset" name="cancel" id="cancel" class="cancel" value="Back To Menu" />
+                    <input type="reset" name="back" id="back" url="/harvester" class="cancel" value="Back" />
                     <input type="reset" name="printQR" id="printQR" class="submit" value="Print QR Code" />
                 </div>
             </form>
