--- a/client/public/littlepo.html
+++ b/client/public/littlepo.html
@@ -18,7 +18,7 @@
 
         <div class="container">
             <form method="POST" class="appointment-form" id="appointment-form">
-                <h2>Littlepo UI</h2>
+                <h2>Little receive tea package</h2>
                 <div class="form-group-1">
                     <input type="text" name="qrCodeId" id="qrCodeId" placeholder="Packer QRCode" required />
                     <input type="text" name="weight" id="weight" placeholder="Package weight" required />
