--- a/client/public/packer.html
+++ b/client/public/packer.html
@@ -27,7 +27,7 @@
                     <input type="text" name="weight" id="weight" placeholder="Package Weight" required/>
                 </div>
                 <div class="form-submit">
-                    <input type="reset" name="cancel" id="cancel" class="cancel" value="Cancel" />
+                    <input type="reset" name="back" id="back" url="/packer/scanharvester" class="cancel" value="Cancel" />
                     <input type="submit" name="submit" id="submit" class="submit" value="Submit" />
                 </div>
             </form>
