--- a/client/public/productInfo.html
+++ b/client/public/productInfo.html
@@ -61,11 +61,10 @@
                 </div>
                 
                 <div class="form-submit">
-                    <input type="reset" name="cancel" id="reset" class="cancel" value="New Query"/>
+                    <input type="reset" name="cancel" id="back" class="cancel" url="/tracking" value="New Query"/>
                 </div>
             </form>
         </div>
-
     </div>
     <!-- JS -->
     <script src="/vendor/jquery/jquery.min.js"></script>
