--- a/client/public/login.html
+++ b/client/public/login.html
@@ -20,7 +20,17 @@
             <form method="POST" class="appointment-form" id="appointment-form">
                 <h2>Login</h2>
                 <div class="form-group-1">
-                	<input type="email" name="email" id="email" placeholder="User ID" required />
+                    <% if (locals.error) { %>
+                    <div class="form-row">
+                        <!-- <div class="form-group">
+                            <label>Error:</label>
+                        </div> -->
+                        <div class="form-group-ans" style="color: red;">
+                            <label><%= error %></label>
+                        </div>
+                    </div>
+                    <% } %>
+                	<input type="text" name="id" id="id" placeholder="User ID" required />
                     <input type="password" class="form-input" name="password" id="password" placeholder="Password"/>
                 </div>
                 <div class="form-submit">
