--- a/client/public/queryResult.html
+++ b/client/public/queryResult.html
@@ -33,7 +33,7 @@
                  <% } %>
 
                 <div class="form-submit">
-                    <input type="reset" name="cancel" id="reset" class="cancel" value="New Query"/>
+                    <input type="reset" name="cancel" id="back" url="/" class="cancel" value="New Query"/>
                 </div>
             </form>
         </div>
