--- a/client/public/customer.html
+++ b/client/public/customer.html
@@ -34,8 +34,8 @@
                 <div class="form-submit">
                     <input type="reset" name="Scan" id="scan" class="cancel" value="Scan"/>
                     <input type="submit" name="submit" id="submit" class="submit" value="View History" />
-                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                    <input type="reset" name="login" id="login" class="submit" value="Login As Operator" />
+                    <!-- &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -->
+                    <!-- <input type="reset" name="login" id="login" class="submit" value="Login As Operator" /> -->
                 </div>
             </form>
         </div>
