--- a/client/public/packerMenu.html
+++ b/client/public/packerMenu.html
@@ -17,7 +17,7 @@
     <div class="main">
 
         <div class="container">
-            <form method="POST">
+            <form method="POST" class="appointment-form">
                 <h2>Packer Action</h2>
                 <div class="form-row">
                 	<!-- <div class="form-group">
