--- a/client/public/scanharvester.html
+++ b/client/public/scanharvester.html
@@ -21,7 +21,7 @@
                 <div class="form-group-1">
                     <input type="text" name="qrCodeId" id="qrCodeId" placeholder="QRCode" required />
                 </div>
-                <div class="form-row">
+                <div class="form-group-1">
                     <div class="video-group">
                         <video id="preview" style="min-height: 100%;width: 250px; border: solid 1px gray;"></video>
                     </div>
