--- a/client/public/addteabag.html
+++ b/client/public/addteabag.html
@@ -20,14 +20,31 @@
             <form method="POST" class="appointment-form" id="appointment-form">
                 <h2>Add teabag UI</h2>
                 <div class="form-group-1">
-                    <input type="text" name="packerQRCodeId" id="packerQRCodeId" placeholder="Packer QRCode" required />
-                    <input type="text" name="productID" id="productID" placeholder="Product ID" required/>
-                    <input type="text" name="productName" id="productName" placeholder="Product Name" required/>
-                    <input type="text" name="weight" id="weight" placeholder="Weight" required/>
-                    <input type="text" name="packageType" id="packageType" placeholder="Package Type" required/>
+                    <input type="text" name="packerQRCodeId" id="packerQRCodeId" placeholder="Scan Packer QRCode" required />
+                    <!-- <input type="text" name="packerQRCodeId" id="packerQRCodeId" placeholder="Packer QRCode" required /> -->
+                    <!-- <input type="text" name="productID" id="productID" placeholder="Product ID" required/> -->
+                    <div class="form-group-1">
+                        <div class="form-group-ans">
+                            <label>Product</label>
+                        </div>
+                        <select name="productId" id="productId">
+                            <option value="TB0001">Tea bag</option>
+                        </select>
+                    </div>
+                    <!-- <input type="text" name="weight" id="weight" placeholder="Weight" required/> -->
+                    <!-- <input type="text" name="packageType" id="packageType" placeholder="Package Type" required/> -->
+                </div>
+                <div class="form-group-1">
+                    <div class="video-group">
+                        <video id="preview" style="min-height: 100%;width: 250px; border: solid 1px gray;"></video>
+                    </div>
+                    <div class="form-group-ans">
+                        <div id="scanResult"></div>
+                    </div>
                 </div>
                 <div class="form-submit">
                     <input type="reset" name="back" id="back" class="cancel" url="/packer" value="Cancel" />
+                    <input type="reset" name="Scan" id="scan" class="cancel" value="Scan QRCode"/>
                     <input type="submit" name="submit" id="submit" class="submit" value="Submit" />
                 </div>
             </form>
@@ -37,6 +54,30 @@
 
     <!-- JS -->
     <script src="/vendor/jquery/jquery.min.js"></script>
+    <script type="text/javascript" src="/js/instascan.min.js"></script>
     <script src="/js/main.js"></script>
+    <script>
+        $(document).ready(function(){
+            let scanner = new Instascan.Scanner({ 
+                video: document.getElementById('preview') 
+            });
+            scanner.addListener('scan', function (content) {
+                // query information from blockchain
+                $("#packerQRCodeId").val(content);
+                scanner.stop();
+            });
+            $("#scan").click(()=> {
+                Instascan.Camera.getCameras().then(function (cameras) {
+                    if (cameras.length > 0) {
+                        scanner.start(cameras[0]);
+                    } else {
+                        console.error('No cameras found.');
+                    }
+                }).catch(function (e) {
+                    console.error(e);
+                });
+            });
+        });
+    </script>
 </body>
 </html>
