--- a/client/public/harvester.html
+++ b/client/public/harvester.html
@@ -7,10 +7,11 @@
     <title>Harvester UI</title>
 
     <!-- Font Icon -->
-    <link rel="stylesheet" href="fonts/material-icon/css/material-design-iconic-font.min.css">
+    <link rel="stylesheet" href="/fonts/material-icon/css/material-design-iconic-font.min.css">
+    
 
     <!-- Main css -->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
 
@@ -20,13 +21,27 @@
             <form method="POST" class="appointment-form" id="appointment-form">
                 <h2>Create Harvest package</h2>
                 <div class="form-group-1">
-                	<input type="text" name="productID" id="productID" placeholder="Product Id" required />
-                    <input type="text" name="productName" id="productName" placeholder="Product Name" required/>
-                    <input type="text" name="packageType" id="packageType" placeholder="Package Type" required/>
+                    <div class="form-group-ans">
+                        <label>Product</label>
+                    </div>
+                    <select name="productId" id="productId">
+                        <option value="PK0001">Tea Package</option>
+                    </select>
+                </div>
+                <div class="form-group-1">
+                    <div class="form-group-ans">
+                        <label>Package Type</label>
+                    </div>
+                    <select name="packageType" id="packageType">
+                        <option value="BOX">Box</option>
+                        <option value="BAG">Bag</option>
+                    </select>
                 </div>
                 <div class="form-submit">
                     <!-- <input type="reset" name="cancel" id="cancel" class="cancel" value="Cancel" /> -->
                     <input type="submit" name="submit" id="submit" class="submit" value="Submit" />
+                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                    <input type="reset" name="logout" id="logout" class="submit" value="Logout" />
                 </div>
             </form>
         </div>
@@ -34,7 +49,8 @@
     </div>
 
     <!-- JS -->
-    <script src="vendor/jquery/jquery.min.js"></script>
-    <script src="js/main.js"></script>
+    <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+    <script src="/js/main.js"></script>
+    <!-- <script src="/js/harvester.js"></script> -->
 </body>
 </html>
