--- a/client/public/littlepo.html
+++ b/client/public/littlepo.html
@@ -23,7 +23,7 @@
                     <input type="text" name="qrCodeId" id="qrCodeId" placeholder="Packer QRCode" required />
                     <input type="text" name="weight" id="weight" placeholder="Package weight" required />
                 </div>
-                <div class="form-row">
+                <div class="form-group-1">
                     <div class="video-group">
                         <video id="preview" style="min-height: 100%;width: 250px; border: solid 1px gray;"></video>
                     </div>
@@ -32,7 +32,7 @@
                     </div>
                 </div>
                 <div class="form-submit">
-                        <input type="reset" name="Scan" id="scan" class="cancel" value="Scan QRCode"/>
+                    <input type="reset" name="Scan" id="scan" class="cancel" value="Scan QRCode"/>
                     <input type="submit" name="submit" id="submit" class="submit" value="Submit" />
                 </div>
             </form>
