--- a/client/public/packer.html
+++ b/client/public/packer.html
@@ -21,10 +21,28 @@
                 <h2>Packer UI</h2>
                 <div class="form-group-1">
                     <input type="text" value ="<%= qrCodeId %>" name="qrCodeId" id="qrCodeId" placeholder="B Node QRCode" required readonly/>
-                    <input type="text" name="productID" id="productID" placeholder="Product Id" required />
-                    <input type="text" name="productName" id="productName" placeholder="Product Name" required/>
-                    <input type="text" name="packageType" id="packageType" placeholder="Package Type" required/>
                     <input type="text" name="weight" id="weight" placeholder="Package Weight" required/>
+                    
+                    <!-- <input type="text" name="productID" id="productID" placeholder="Product Id" required /> -->
+                    <!-- <input type="text" name="productName" id="productName" placeholder="Product Name" required/> -->
+                    <!-- <input type="text" name="packageType" id="packageType" placeholder="Package Type" required/> -->
+                </div>
+                <div class="form-group-1">
+                    <div class="form-group-ans">
+                        <label>Product</label>
+                    </div>
+                    <select name="productId" id="productId">
+                        <option value="PK0001">Tea Package</option>
+                    </select>
+                </div>
+                <div class="form-group-1">
+                    <div class="form-group-ans">
+                        <label>Package Type</label>
+                    </div>
+                    <select name="packageType" id="packageType">
+                        <option value="BOX">Box</option>
+                        <option value="BAG">Bag</option>
+                    </select>
                 </div>
                 <div class="form-submit">
                     <input type="reset" name="back" id="back" url="/packer/scanharvester" class="cancel" value="Cancel" />
