--- a/client/public/packerResult.html
+++ b/client/public/packerResult.html
@@ -102,7 +102,7 @@
                 </div>
                 
                 <div class="form-submit">
-                    <input type="reset" name="cancel" id="cancel" class="cancel" value="Back To Menu" />
+                    <input type="reset" name="cancel" id="back" url ="/packer" class="cancel" value="Back" />
                     <input type="reset" name="printQR" id="printQR" class="submit" value="Print QR Code" />
                 </div>
             </form>
