--- a/client/public/retailshop.html
+++ b/client/public/retailshop.html
@@ -21,13 +21,34 @@
                 <h2>Create tea cup Panel</h2>
                 <div class="form-group-1">
                     <input type="text" name="dxQRCodeId" id="dxQRCodeId" placeholder="Teabag QRCode" required />
-                	<input type="text" name="productId" id="productId" placeholder="Product Id" required />
-                    <input type="text" name="productName" id="productName" placeholder="Product Name" required/>
-                    <input type="text" name="packageType" id="packageType" placeholder="Package Type" required/>
                     <input type="text" name="price" id="price" placeholder="Price" required/>
                 </div>
+                <div class="form-group-1">
+                    <div class="form-group-ans">
+                        <label>Product</label>
+                    </div>
+                    <select name="productId" id="productId">
+                        <option value="TC0001">Tea Cup</option>
+                    </select>
+                </div>
+                <div class="form-group-1">
+                    <div class="form-group-ans">
+                        <label>Package Type</label>
+                    </div>
+                    <select name="packageType" id="packageType">
+                        <option value="CUP">Cup</option>
+                    </select>
+                </div>
+                <div class="form-group-1">
+                    <div class="video-group">
+                        <video id="preview" style="min-height: 100%;width: 250px; border: solid 1px gray;"></video>
+                    </div>
+                    <div class="form-group-ans">
+                        <div id="scanResult"></div>
+                    </div>
+                </div>
                 <div class="form-submit">
-                    <!-- <input type="reset" name="cancel" id="cancel" class="cancel" value="Cancel" /> -->
+                    <input type="reset" name="Scan" id="scan" class="cancel" value="Scan QRCode"/>
                     <input type="submit" name="submit" id="submit" class="submit" value="Submit" />
                 </div>
             </form>
@@ -36,7 +57,31 @@
     </div>
 
     <!-- JS -->
-    <script src="vendor/jquery/jquery.min.js"></script>
-    <script src="js/main.js"></script>
+    <script type="text/javascript" src="/js/instascan.min.js"></script>
+    <script src="/vendor/jquery/jquery.min.js"></script>
+    <script src="/js/main.js"></script>
+    <script>
+        $(document).ready(function(){
+            let scanner = new Instascan.Scanner({ 
+                video: document.getElementById('preview') 
+            });
+            scanner.addListener('scan', function (content) {
+                // query information from blockchain
+                $("#dxQRCodeId").val(content);
+                scanner.stop();
+            });
+            $("#scan").click(()=> {
+                Instascan.Camera.getCameras().then(function (cameras) {
+                    if (cameras.length > 0) {
+                        scanner.start(cameras[0]);
+                    } else {
+                        console.error('No cameras found.');
+                    }
+                }).catch(function (e) {
+                    console.error(e);
+                });
+            });
+        });
+    </script>
 </body>
 </html>
